// Vitest Snapshot v1

exports[`Nav > authenticated > clicking on the user menu button 1`] = `
<DocumentFragment>
  <div
    class="isolate bg-white"
  >
    <div
      class="lg"
    >
      <nav
        class="bg-gray-800"
      >
        <div
          class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
        >
          <div
            class="flex h-16 items-center justify-between"
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex-shrink-0"
              >
                <svg
                  class="h-6 w-6 stroke-white"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </div>
              <div
                class="hidden md:block"
              >
                <div
                  class="ml-10 flex items-baseline space-x-4"
                >
                  <a
                    aria-current="page"
                    class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium"
                    href="/dashboard"
                  >
                    Dashboard
                  </a>
                  <a
                    class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                    href="/books"
                  >
                    Books
                  </a>
                  <a
                    class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                    href="/reading"
                  >
                    Reading
                  </a>
                  <a
                    class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                    href="/sight-words"
                  >
                    Sight Words
                  </a>
                </div>
              </div>
            </div>
            <div
              class="hidden md:block"
            >
              <div
                class="ml-4 flex items-center md:ml-6"
              >
                <div
                  class="relative ml-3"
                >
                  <div>
                    <button
                      class="bg-transparent inline-flex items-center rounded-lg text-sm text-gray-400 rounded-full bg-gray-800 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
                      data-testid="user-menu-button"
                      id="user-menu-button"
                      type="button"
                    >
                      <svg
                        class="h-8 w-8 stroke-white"
                        fill="none"
                        stroke="currentColor"
                        stroke-width="1.5"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Nav > not authenticated > clicking on the login button 1`] = `
<DocumentFragment>
  <div
    class="isolate bg-white"
  >
    <div
      class="lg"
    >
      <nav
        class="bg-gray-800"
      >
        <div
          class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
        >
          <div
            class="flex h-16 items-center justify-between"
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex-shrink-0"
              >
                <svg
                  class="h-6 w-6 stroke-white"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </div>
              <div
                class="hidden md:block"
              >
                <div
                  class="ml-10 flex items-baseline space-x-4"
                >
                  <a
                    aria-current="page"
                    class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium"
                    href="/"
                  >
                    Home
                  </a>
                  <a
                    class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                    href="/register"
                  >
                    Register
                  </a>
                </div>
              </div>
            </div>
            <div
              class="hidden md:block"
            >
              <div
                class="ml-4 flex items-center md:ml-6"
              >
                <div
                  class="relative ml-3"
                >
                  <div>
                    <button
                      class="rounded-lg font-medium text-base text-center px-5 py-2.5 text-gray bg-gray-200 hover:bg-gray-300 "
                    >
                      Log in
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;
